Small tweaks/updates

--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -3,7 +3,7 @@
 
 <p class="text-center text-lg">
   👋<br />
-  Hi, I'm Eliaz, a <span id="dyn_age"></span> years-old developer who is curently
+  Hi, I'm Eliaz, a <span id="dyn_age"></span> years-old developer who is currently
   studying at
   <a href="https://www.uca.fr/licence-informatique">UCA</a>.
   <br />
