--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -1,16 +1,33 @@
----
----
-
 <p class="text-center text-lg">
   👋<br />
-  Hi, I'm Eliaz, a <span id="dyn_age"></span> years-old developer who is currently
-  studying at
-  <a href="https://www.uca.fr/licence-informatique">UCA</a>.
+  Hi, I'm Eliaz, a <span id="dyn_age"></span> years-old developer currently in my
+  second year of a master's degree at
+  <a href="https://www.isima.fr/formations/masters/">ISIMA</a>.
   <br />
   I'm interested in a lot of subjects ranging from economics to technology in general.<br
   />
-  <a href="https://github.com/Eliaz-LR">My Github</a>.
   <a href="mailto:me@eliaz-lr.dev">Email me here</a> !
+  <!-- Badges -->
+  <div class="flex justify-center space-x-4 m-4">
+    <a href="https://github.com/Eliaz-LR">
+      <img
+        src="https://img.shields.io/badge/GitHub-000000?style=flat&logo=GitHub&logoColor=#d16c06"
+        alt="GitHub profile"
+      />
+    </a>
+    <a href="https://wakatime.com/@daf0cfff-7431-487e-b036-5476747df82f">
+      <img
+        src="https://wakatime.com/badge/user/daf0cfff-7431-487e-b036-5476747df82f.svg"
+        alt="Total time coded since Mar 5 2022"
+      />
+    </a>
+    <a href="https://leetcode.com/Eliaz-LR/">
+      <img
+        src="https://img.shields.io/badge/LeetCode-000000?style=flat&logo=LeetCode&logoColor=#d16c06"
+        alt="LeetCode profile"
+      />
+    </a>
+  </div>
 </p>
 
 <script>
@@ -28,5 +45,4 @@
       dynAgeElement.innerText = calculateAge();
     }
   }, 50);
-
 </script>
