--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -1,3 +1,4 @@
+<h1 class="text-center">Welcome !</h1>
 <p class="text-center text-lg">
   👋<br />
   Hi, I'm Eliaz, a <span id="dyn_age"></span> years-old developer currently in my
