--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -1,5 +1,6 @@
 ---
-  import dayjs from "dayjs";
+import { Image } from "astro:assets";
+import dayjs from "dayjs";
 
   const calculateAge = () => {
     return dayjs().diff(dayjs("2000-12-03"), "year", true).toFixed(9);
@@ -9,9 +10,7 @@
   <h1 class="text-center">Welcome !</h1>
   <p class="text-center text-lg">
     👋<br />
-    Hi, I'm Eliaz, a <span id="dyn_age">{calculateAge}</span> years-old developer currently in my
-    second year of a master's degree at
-    <a href="https://www.isima.fr/formations/masters/">ISIMA</a>.
+    Hi, I'm Eliaz, a <span id="dyn_age">{calculateAge}</span> years-old software engineer, currently living in Paris 🗼.
     <br />
     I'm interested in a lot of subjects ranging from economics to technology in general.<br
     />
@@ -19,21 +18,27 @@
     <!-- Badges -->
     <div class="flex justify-center space-x-4 m-4">
       <a href="https://github.com/Eliaz-LR">
-        <img
+        <Image
           src="https://img.shields.io/badge/GitHub-000000?style=flat&logo=GitHub&logoColor=#d16c06"
           alt="GitHub profile"
+          inferSize={true}
+          loading={"eager"}
         />
       </a>
       <a href="https://wakatime.com/@daf0cfff-7431-487e-b036-5476747df82f">
-        <img
+        <Image
           src="https://wakatime.com/badge/user/daf0cfff-7431-487e-b036-5476747df82f.svg"
           alt="Total time coded since Mar 5 2022"
+          inferSize={true}
+          loading={"eager"}
         />
       </a>
       <a href="https://leetcode.com/Eliaz-LR/">
-        <img
+        <Image
           src="https://img.shields.io/badge/LeetCode-000000?style=flat&logo=LeetCode&logoColor=#d16c06"
           alt="LeetCode profile"
+          inferSize={true}
+          loading={"eager"}
         />
       </a>
     </div>
